# RAG

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run_local.sh  setup.sh  setup_local.sh  start_local.sh  stop_local.sh
app/: config.py  main.py
app/rag/: agent.py  chunking.py  downloader.py  embeddings.py  llm.py  parsing.py  schemas.py  vector_store.py
infra/: Dockerfile  prometheus.yml
tests/: test_chunking.py  test_downloader.py
ui/: streamlit_app.py
