[project]
name = "agentic-rag-stack"
version = "0.2.0"
description = "Open-source, production-oriented end-to-end agentic RAG stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langfuse>=2.44.0",
  "sentence-transformers>=3.0.0",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20.0",
  "structlog>=24.4.0",
  "streamlit>=1.37.0",
  "requests>=2.32.0",
  "docling>=2.12.0",
  "faiss-cpu>=1.8.0.post1",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

target-version = "py311"
